updated privacy policy

--- a/piano-note-trainer-privacy-policy/index.html
+++ b/piano-note-trainer-privacy-policy/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                    DruSoft built the Piano Note Trainer app as
-                    an Ad Supported app. This SERVICE is provided by
-                    DruSoft at no cost and is intended for
+                    I built the Piano Note Trainer app as
+                    a Free app. This SERVICE is provided by
+                    me at no cost and is intended for
                     use as is.
                   </p> <p>
                     This page is used to inform visitors regarding
